# deepblue-vision

Backend/: pyproject.toml
Backend/src/: age_gender.py  cluade.py  main.py  model.py  sample_height.py  try.py
UI/deepblue/: README.md  package-lock.json  package.json
UI/deepblue/src/: App.vue
UI/deepblue/src/components/: AnalysisResults.vue  ContactInfo.vue  ImageUploader.vue  MeasurementCard.vue  ProcessGuide.vue
UI/deepblue/src/router/: index.js
UI/deepblue/src/views/: HomeView.vue  ResultsView.vue
