[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.11",
    "langchain-core>=0.3.24",
    "langchain-groq>=0.2.1",
    "langchain-openai>=0.2.12",
    "langchain-pinecone>=0.2.0",
    "langchain>=0.3.11",
    "langsmith>=0.2.2",
    "pandas>=2.2.3",
    "pdfreader>=0.1.15",
    "pinecone>=5.3.1",
    "pypdf>=5.1.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "weave>=0.51.23",
    "cohere>=5.13.3",
    "datetime>=5.5",
    "wikipedia>=1.4.0",
    "llama-index-agent-openai==0.2.9",
    "llama-index-cli==0.1.13",
    "llama-index-llms-openai==0.1.31",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.7",
    "pyowm>=3.3.0",
    "docling>=2.12.0",
    "docling-core>=2.10.0",
    "rank-bm25>=0.2.2",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "langchain-experimental>=0.3.4",
    "langgraph>=0.2.60",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "langchain-weaviate>=0.0.3",
    "scikit-learn>=1.6.0",
    "duckduckgo-search>=7.2.0",
    "langchain-ollama>=0.2.2",
    "phidata>=2.7.6",
    "yfinance>=0.2.51",
    "pinecone-text>=0.9.0",
    "nltk>=3.9.1",
    "chromadb>=0.6.2",
    "streamlit>=1.41.1",
    "google-generativeai>=0.8.3",
    "opencv-python>=4.11.0.86",
    "mediapipe>=0.10.20",
    "python-multipart>=0.0.20",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "deepface>=0.0.93",
    "tensorflow>=2.12.0",
    "tensorflow-io>=0.31.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
